Bug 296487 - style changes are not applied immediately
Summary: style changes are not applied immediately
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4-snapshots
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
: 298448 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-21 10:19 UTC by Silver Salonen
Modified: 2012-04-21 08:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Silver Salonen 2012-03-21 10:19:06 UTC
User-Agent:       Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/535.21 (KHTML, like Gecko) Chrome/19.0.1046.0 Safari/535.21 SUSE/19.0.1046.0
Build Identifier: 

When changes are applied to a style, the changes appear only on new applications of the style.

Reproducible: Always

Steps to Reproduce:
1. Insert some text
2. Apply some changes to the text's style
3. Insert some new text with the same style
Actual Results:  
Only new text has the updated style parameters

Expected Results:  
Updates should be applied to the existing text immediately after applying changes to the style.
Comment 1 Camilla Boemann 2012-03-21 10:26:04 UTC
This works fine for me. What exactly do you mean by 2
Comment 2 Silver Salonen 2012-03-21 10:30:56 UTC
I open style manager and changed Indent/Spacing of paragraph style "Standard": First line, Before, After. None of the changes took effect immediately, but when I re-applied the style to a paragraph (or created a new paragraph with that style).
Comment 3 Camilla Boemann 2012-03-21 14:08:10 UTC
I still cannot reproduce. What version are you using?
Comment 4 Silver Salonen 2012-03-21 14:08:40 UTC
2.4 beta7.
Comment 5 Camilla Boemann 2012-03-21 14:11:26 UTC
ok we will ship rc2 tonight  can you please retry with that
Comment 6 Silver Salonen 2012-04-04 11:57:40 UTC
Tried it with RC2. Still happens.

What I did:
1) Inserted some text to 1st line
2) Changed font of 'Standard' paragraph to bold (the text's style was updated OK)
3) Inserted 2 more lines (text with the new style was inserted)
4) Went to a new line (pressed return)
5) Changed font of 'Standard' paragraph to regular and 9 (already inserted text was not updated to the new style)
6) Inserted more text onto the line where the cursor was (text with the previous style (bold) was inserted)

BTW, I have Qt 4.8.0 installed - maybe this makes some difference?
Comment 7 Camilla Boemann 2012-04-04 16:41:24 UTC
it seems to  be restricted to only some things. I change between bold and regular and can confirm
Comment 8 Camilla Boemann 2012-04-21 06:33:38 UTC
*** Bug 298448 has been marked as a duplicate of this bug. ***
Comment 9 Camilla Boemann 2012-04-21 07:21:00 UTC
Git commit a7f0c8f0520b81490ebaa4cfa934d1ca8892285b by C. Boemann.
Committed on 17/04/2012 at 08:28.
Pushed by boemann into branch 'master'.

Oops we broke the updating of styles in commit 071e4e41

Will backport

M  +13   -3    libs/kotext/commands/ChangeStylesMacroCommand.cpp

http://commits.kde.org/calligra/a7f0c8f0520b81490ebaa4cfa934d1ca8892285b
Comment 10 Camilla Boemann 2012-04-21 07:22:31 UTC
Git commit 4a43e94808b28f9005cac1e3daabf5087a6673b2 by C. Boemann.
Committed on 17/04/2012 at 08:28.
Pushed by boemann into branch 'calligra/2.4'.

Oops we broke the updating of styles in commit 071e4e41

Will backport

M  +13   -3    libs/kotext/commands/ChangeStylesMacroCommand.cpp

http://commits.kde.org/calligra/4a43e94808b28f9005cac1e3daabf5087a6673b2
Comment 11 Camilla Boemann 2012-04-21 08:05:43 UTC
Git commit f0612dc8e15e71c3c7fe14d46e96e38e61444b46 by C. Boemann.
Committed on 17/04/2012 at 08:28.
Pushed by boemann into branch 'tuneKoUnitAPI'.

Oops we broke the updating of styles in commit 071e4e41

Will backport

M  +13   -3    libs/kotext/commands/ChangeStylesMacroCommand.cpp

http://commits.kde.org/calligra/f0612dc8e15e71c3c7fe14d46e96e38e61444b46