Oops we broke the updating of styles in commit 071e4e41

Will backport

BUG: 296487